--- a/python/pluralsight-intro2flask/thermos/thermos/static/css/main.css
+++ b/python/pluralsight-intro2flask/thermos/thermos/static/css/main.css
@@ -179,6 +179,42 @@ footer h3 {
     color: white;
 }
 
+/* flashes styling */
+
+.flashes ul {
+    margin: 0 0;
+    background: #FFD6A3;
+    color: #000;
+    
+    list-sytle-type: none;
+    list-style: none;
+}
+
+.flashes ul {
+    background: #FFD6A3;
+    color: #000;
+}
+
+article.flashes {
+    margin-bottom: 1em;
+}
+
+.error, .error input {
+    color: red;
+}
+
+tr.error td ul {
+    margin-top: 0;
+}
+
+tr.submit button {
+    margin-top: 20px;
+}
+
+input, button {
+    margin-left: 10px;
+}
+
 /* ==========================================================================
    Media Queries
    ========================================================================== */
