Pluralsight tutorial "Introduction to the Flask Microframework".
Chapter 6 and 7

Change-Id: I3f509fc1cbee9cfd19125cde060b8091c90593cc
Signed-off-by: Wei Ren <renwei@smartconn.cc>

--- a/python/pluralsight-intro2flask/thermos/thermos/templates/index.html
+++ b/python/pluralsight-intro2flask/thermos/thermos/templates/index.html
@@ -8,27 +8,18 @@ Thermos -- Welcome
     <article>
         <header>
             <h1>Welcome</h1>
-            <p>pytwis is a simple twitter clone powered by python, flask, and redis.</p>
+            <p>Thermos is a simple social bookmarking site. Or actually, it is a demo for the <a href="http://www.pluralsight.com">Pluralsight</a> course titled <em>Flask Fundamentals</em>.</p>
+            <p>Don't have an account? Create one by <a href="{{ url_for('signup') }}">Signing up</a></p>
         </header>
         <section>
             <h2>Recently Added</h2>
             {% if new_bookmarks %}
-                <ul>
-                    {% for bm in new_bookmarks %}
-                        <li><a href="{{ url_for('user', username=bm.user.username) }}">{{ bm.user.username }}</a> added <a href="{{ bm.url }}">{{ bm.url }}</a> with description: {{ bm.description }}</li>
-                    {% endfor %}
-                </ul>
+                {% with bookmarks = new_bookmarks %}
+                    {% include "bookmark_list.html" %}
+                {% endwith %}
             {% else %}
                 No bookmarks yet.
             {% endif %}
         </section>
-        <section>
-            <h2>article section h2</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
-        </section>
-        <footer>
-            <h3>article footer h3</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor.</p>
-        </footer>
     </article>
 {% endblock %}
