--- a/python/pluralsight-intro2flask/thermos/thermos/static/css/main.css
+++ b/python/pluralsight-intro2flask/thermos/thermos/static/css/main.css
@@ -158,24 +158,35 @@ nav a:hover {
    Author's custom styles
    ========================================================================== */
 
-a {
-    color: #8F540D;
-}
-
-a:hover {
-    color: #D39447;
-}
-
+/* link styling */
+a,
 a:visited {
     color: #1E5373;
 }
+a:hover, aside a:hover, aside a:visited:hover {
+    color: #D39447;
+}
+
+aside a {
+    color: #FFD6A3;
+}
+
+aside a:hover {
+    color: #F5BB73;
+}
+
+aside a:visited {
+    color: #D39447;
+}
 
 h1, h2, h3, h4, h5, h6 {
-    color: #1E5373
+    color: #1E5373;
 }
 
 .main aside h3,
-footer h3 {
+footer h3,
+footer a,
+footer a:visited {
     color: white;
 }
 
@@ -197,6 +208,42 @@ footer h3 {
 
 article.flashes {
     margin-bottom: 1em;
+}
+
+/* fix from layout with flashes */
+section {
+    clear: left;
+}
+
+/* bookmark list styling */
+ul.bookmarks {
+    list-style: none none;
+    padding-left: 0;
+}
+
+.bookmark {
+    padding-bottom: .5em;
+    border-top: 1px solid #7EA6BF;
+    padding: 1em 0;
+}
+
+a.header{
+    color: #326786;
+    text-decoration: none;
+    display: block;
+}
+
+a.header h3 {
+    margin: 0 0;
+}
+
+div.info {
+    font-size: .95em;
+    color: #666666;
+}
+
+span.editlinks {
+    float: right;
 }
 
 .error, .error input {
