--- a/python/pluralsight-intro2flask/thermos/thermos/templates/base.html
+++ b/python/pluralsight-intro2flask/thermos/thermos/templates/base.html
@@ -6,22 +6,29 @@
         <title>{% block title %}{% endblock %}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.min.css') }}">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-
+        
+        {% block styles %}
+            <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.min.css') }}">
+            <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+        {% endblock %}
+        
         <script src="{{ url_for('static', filename='js/vendor/modernizr-2.8.3-respond-1.4.2.min.js') }}"></script>
     </head>
     <body>
 
         <div class="header-container">
             <header class="wrapper clearfix">
-                <a href="{{ url_for('index') }}"><h1 class="title">pytwis</h1></a>
+                <a href="{{ url_for('index') }}"><h1 class="title">Thermos</h1></a>
                 <nav>
                     <ul>
                         <li><a href="{{ url_for('add') }}">Add URL</a></li>
-                        <li><a href="#">nav ul li a</a></li>
-                        <li><a href="#">nav ul li a</a></li>
+                        {% if current_user.is_authenticated %}
+                            <li><a href="{{ url_for('user', username=current_user.username) }}">My Links</a></li>
+                            <li><a href="{{ url_for('logout') }}">Sign out</a></li>
+                        {% else %}
+                            <li><a href="{{ url_for('signup') }}">Sign up</a></li>
+                            <li><a href="{{ url_for('login') }}">Sign in</a></li>
+                        {% endif %}
                     </ul>
                 </nav>
             </header>
@@ -46,8 +53,10 @@
                 
                 {% block sidebar %}
                     <aside>
-                        <h3>aside</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.</p>
+                        <h3>Tags</h3>
+                            {% for t in all_tags() %}
+                                <a href="{{ url_for('tag', name=t.name) }}">{{ t.name }}</a>
+                            {% endfor %}
                     </aside>
                 {% endblock %}
             </div> <!-- #main -->
@@ -55,13 +64,14 @@
 
         <div class="footer-container">
             <footer class="wrapper">
-                <h3>footer</h3>
+                <p>Thermos by <a href="http://www.rjekker.nl">Reindert-Jan Ekker</a> for <a href="http://www.pluralsight.com">Pluralsight</a></p>
             </footer>
         </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="{{ url_for('static', filename='js/vendor/jquery-1.11.2.min.js') }}"><\/script>')</script>
-
-        <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+       {{ moment.include_jquery() }}
+       {{ moment.include_moment() }}
+       
+       {% block scripts %}
+       {% endblock %}
     </body>
 </html>
