--- a/python/pluralsight-intro2flask/thermos/thermos/templates/signup.html
+++ b/python/pluralsight-intro2flask/thermos/thermos/templates/signup.html
@@ -2,19 +2,21 @@
 {% from "form_macros.html" import render_field %}
 
 {% block title %}
-Thermos -- Add a URL
+Thermos -- Signup
 {% endblock %}
 
 {% block content %}
     <section>
-        <h1>Add a new URL</h1>
+        <h1 style="clear:both">Create an account</h1>
         <form action="" method="post">
             {{ form.hidden_tag() }}
             <table>
-                {{ render_field(form.url, size=50) }}
-                {{ render_field(form.description, size=50) }}
+                {{ render_field(form.username, size=50) }}
+                {{ render_field(form.email, size=50) }}
+                {{ render_field(form.password, size=50) }}
+                {{ render_field(form.password2, size=50) }}
                 
-                <tr>
+                <tr class="submit">
                     <td></td>
                     <td><button type="submit">Submit</button></td>
                 </tr>
