--- a/python/pluralsight-intro2flask/thermos/thermos/templates/index.html
+++ b/python/pluralsight-intro2flask/thermos/thermos/templates/index.html
@@ -9,7 +9,7 @@ Thermos -- Welcome
         <header>
             <h1>Welcome</h1>
             <p>Thermos is a simple social bookmarking site. Or actually, it is a demo for the <a href="http://www.pluralsight.com">Pluralsight</a> course titled <em>Flask Fundamentals</em>.</p>
-            <p>Don't have an account? Create one by <a href="{{ url_for('signup') }}">Signing up</a></p>
+            <p>Don't have an account? Create one by <a href="{{ url_for('auth.signup') }}">Signing up</a></p>
         </header>
         <section>
             <h2>Recently Added</h2>
